kubernetes-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todos
  labels:
    name: todos
---
